fixed overflow issue

--- a/src/app/page.css
+++ b/src/app/page.css
@@ -1,5 +1,10 @@
 .Home {
   text-align: center;
+  overflow-x: hidden;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 h1 {
